<resources>
    <!--Keys-->
    <string name="Google_Maps_API_Key">"AIzaSyDCGD3YBl9JssVJKfRm9yFM13SxOz8cSeQ"</string>

    <!-- welcome screen-->
    <string name="app_name">Real Estate Manager</string>
    <string name="app_slogan">"Le bien qu'il vous faut"</string>
    <string name="login_go">"Démarrer"</string>
    <string name="welcome_picture">"photo d'accueil"</string>

    <!-- Bottom Nav Bar -->
    <string name="nav_title">"Real Estate Manager"</string>
    <string name="nav_detail">"Fiche détaillée"</string>
    <string name="nav_list">"Liste"</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">"Ouvrir le menu"</string>
    <string name="navigation_drawer_close">"Fermer le menu"</string>
    <string name="title_3">"Real \nEstate \nManager"</string>
    <string name="drawer_title_settings">"Outils"</string>
    <string name="drawer_title_search">"Recherche"</string>
    <string name="drawer_title_update">"Mise à jour"</string>

    <!-- Menu -->
    <string name="menu_add">"Ajouter un bien"</string>
    <string name="menu_update">"Modifier un bien"</string>
    <string name="menu_search">"Filtres"</string>
    <string name="menu_param">"Paramètres"</string>
    <string name="menu_convert">"Conversion"</string>
    <string name="menu_credit">"Calcul de coût de crédit"</string>
    <string name="menu_map">"Carte"</string>
    <string name="menu_home">"Accueil"</string>

    <!-- Detail layout-->
    <string name="recyclerview_title">"Photos"</string>
    <string name="recyclerview_description">"Description du carousel photos"</string>
    <string name="description_title">"Description"</string>
    <string name="house_description">"Description du bien"</string>
    <string name="surface_title">"Surface"</string>
    <string name="surface_text">"0"</string>
    <string name="room_title">"Pièces"</string>
    <string name="room_text">"0"</string>
    <string name="bedroom_title">"Chambres"</string>
    <string name="bedroom_text">"0"</string>
    <string name="bathroom_title">"Salles de bain"</string>
    <string name="bathroom_text">"0"</string>
    <string name="location_title">"Adresse"</string>
    <string name="location_number">"numéro"</string>
    <string name="location_street">" nom de la rue"</string>
    <string name="location_street2">"complément"</string>
    <string name="location_zipcode">"code postal"</string>
    <string name="location_town">"Ville"</string>
    <string name="location_country">"Pays"</string>
    <string name="square_meter">"sq m"</string>
    <string name="devise">"€"</string>
    <string name="statut">"Statut"</string>
    <string name="date_offer">"Mise en vente"</string>
    <string name="date_sold">"Vente"</string>
    <string name="school">"école"</string>
    <string name="shop">"commerces"</string>
    <string name="museum">"musées"</string>
    <string name="park">"parc"</string>
    <string name="localisation">"Localisation</string>
    <string name="detail_update">" Mettre à jour "</string>
    <string name="detail_before">" Précédent "</string>
    <string name="detail_after">" Suivant "</string>
    <string name="before_not_allowed">"Vous êtes déjà au début de la liste"</string>
    <string name="after_not_allowed">"Vous êtes déjà à la fin de la liste"</string>

    <!-- Create layout-->
    <string name="set_location_number">"Numéro"</string>
    <string name="set_location_street">"Rue"</string>
    <string name="set_location_street2">"Complément"</string>
    <string name="set_location_zipcode">"Code postal"</string>
    <string name="set_location_town">"Ville"</string>
    <string name="set_location_country">"Pays"</string>
    <string name="price_title">"Prix"</string>
    <string name="price_text">"99999"</string>
    <string name="euros">"€"</string>
    <string name="dollars">"$"</string>
    <string name="insert_photo">"Ajouter une photo"</string>
    <string name="describe_photo">"Légende"</string>
    <string name="validation">"Valider"</string>
    <string name="add_photo">"Ajouter des photos"</string>
    <string name="dismiss">"Annuler"</string>
    <string name="agency_informations">"Informations agence"</string>
    <string name="agent_in_charge">"Responsable"</string>
    <string name="date_example">"12/05/2019"</string>
    <string name="agent_example">"Jules"</string>
    <string name="please_insert_address">"La fiche ne peut pas être sauvegardée si l'addresse n'est pas renseignée."</string>
    <string name="create_status">"Statut"</string>
    <string name="address_missing">"Il faut entrer l'adresse du bien."</string>
    <string name="photo_missing">"Il faut définir une photo principale."</string>
    <string name="soldon_date_missing">"Il faut entrer la date de vente."</string>

    <string-array name="create_agent_name">
        <item>Jules</item>
        <item>Marcelina</item>
        <item>Victoire</item>
    </string-array>

    <string-array name="filter_agent_ask">
        <item>Jules</item>
        <item>Marcelina</item>
        <item>Victoire</item>
        <item>Tous</item>
    </string-array>

    <string name="all">Tous</string>

    <string-array name="create_status_array">
        <item>En cours de création</item>
        <item>En vente</item>
        <item>En cours de négociation</item>
        <item>Vendu</item>
    </string-array>

    <string name="status_sold">"Vendu"</string>

    <string-array name="filter_status_ask">
        <item>En cours de création</item>
        <item>En vente</item>
        <item>En cours de négociation</item>
        <item>Vendu</item>
        <item>Tous</item>
    </string-array>

    <string name="photo_permission_allowed">"L'accès aux photos est autorisé."</string>
    <string name="photo_permission_denied">"L'accès aux photos est refusé."</string>
    <string name="no_photo">"Aucune photo n'a été choisie"</string>
    <string name="add_main_photo">"Ajouter la photo principale"</string>
    <string name="modify_main_photo">"Changer la photo principale"</string>
    <string name="modify_others_photo">"Ajouter une autre photo"</string>
    <string name="delete_photo">"Supprimer une photo"</string>
    <string name="search_photo">"Chercher une photo"</string>
    <string name="take_photo">"Prendre une photo"</string>
    <string name="main_photo">"Photo principale"</string>
    <string name="add_more_photo">"Ajouter d'autres photos"</string>
    <string name="more_photo">"Autres photos"</string>
    <string name="add_main_photo_description">"Légende de la photo"</string>
    <string name="add_main_photo_description_short">"Légende"</string>
    <string name="photo_and_legend_needed">"Il faut choisir une photo et une légende."</string>

    <string name="add_photo_close">"Valider"</string>
    <string name="add_photo_more">"Continuer"</string>

    <string name="error">"Oups! Quelque chose n'a pas fonctionné."</string>
    <string name="ok">"OK"</string>
    <string name="reset">"Annuler"</string>

    <string name="warning">"Attention!</string>

    <!-- List Recyclerview  -->
    <string name="house_type">"Type de bien"</string>

    <!-- Search Activity -->
    <string name="search_type_ask">"Type de bien"</string>
    <string-array name="search_type_answer">
        <item>Appartement</item>
        <item>Loft</item>
        <item>Maison</item>
        <item>Manoir</item>
        <item>Château</item>
    </string-array>

    <string-array name="filter_type_ask">
        <item>Appartement</item>
        <item>Loft</item>
        <item>Maison</item>
        <item>Manoir</item>
        <item>Château</item>
        <item>Tous</item>
    </string-array>

    <string name="search_price_mini_ask">"Prix min"</string>
    <string name="search_price_max_ask">"Prix max"</string>
    <string name="search_surface_mini_ask">"Surf. min"</string>
    <string name="search_surface_max_ask">"Surf. max"</string>
    <string name="search_room_ask">"Nbre de pièces min"</string>
    <string name="search_bedroom_ask">"Nbre de chambres min"</string>
    <string name="search_bathroom_ask">"Nbre de salles de bain min"</string>
    <string name="search_photo_ask">"Nbre de photos supérieur à "</string>
    <string name="search_attracting_ask">"Points d'intérêt à proximité"</string>
    <string name="search_max_date_ask">"Mis en vente avant le "</string>
    <string name="search_min_date_ask">"Mis en vente après le "</string>
    <string name="search_max_datesold_ask">"Vendu avant le "</string>
    <string name="search_min_datesold_ask">"Vendu après le "</string>

    <!-- Settings Activity -->
    <string name="settings_devise_ask">"Convertisseur"</string>
    <string name="settings_euros">"Euros"</string>
    <string name="settings_dollars">"Dollars"</string>
    <string name="convert_devise">"Convertir"</string>
    <string-array name="settings_devise_answer">
        <item>€</item>
        <item>$</item>
    </string-array>

    <!-- Map Activity-->
    <string name="map_connection_error">"Nous ne pouvons pas nous connecter à Google Map"</string>
    <string name="no_connection">"Vous n'êtes pas connecté à Internet.</string>
    <string name="room">" pièce(s) "</string>

    <!-- Notification-->
    <string name="channel_description">"Channel notification de Real Estate Manager"</string>
    <string name="notification_title">"Bravo!"</string>
    <string name="notification_message">"Le nouveau bien a été créé."</string>

    <!-- Credit Activity-->
    <string name="credit_title">"Simulateur coût de crédit"</string>
    <string name="credit_input">"Montant emprunté"</string>
    <string name="credit_length">"Durée en années"</string>
    <string name="credit_interest">"Taux"</string>
    <string name="credit_month">"Mensualités"</string>
    <string name="credit_cost">"Coût total du crédit"</string>
    <string name="credit_capital">"Capital remboursé chaque mois"</string>
    <string name="euros_needed">"Il faut entrer une valeur en euros."</string>
    <string name="dollars_needed">"Il faut entrer une valeur en dollars."</string>

    <!-- Update activity -->
    <string name="update_ok">"Le bien a été mis à jour."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

