<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main_activity_linear_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:gravity="bottom"
android:orientation="vertical"
android:background="@drawable/fond"
    android:contentDescription="@string/welcome_picture"
tools:context=".WelcomeActivity">



<!-- TITLE-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/default_large_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccentLight"
        android:textSize="@dimen/default_welcome_title_size"
        android:textStyle="bold" />

<!-- DESCRIPTION -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_extra_large_margin"
        android:paddingTop="@dimen/default_margin"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textColor="@color/colorAccentLight"
        android:textSize="@dimen/default_title_size"
        android:textStyle="italic" />

<!-- BUTTON GO -->
<Button
    android:id="@+id/welcome_go_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:text="@string/login_go"
    android:textColor="#fff"
    android:textSize="@dimen/default_text_size"
    android:background="@color/colorPrimary"
    style="?android:attr/borderlessButtonStyle"
    android:layout_margin="@dimen/default_very_large_margin"
    android:padding="@dimen/default_margin"/>


</LinearLayout>